<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pet.andrewdev.com.pet.EditorActivity"
    android:padding="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview"/>
        <EditText
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:id="@+id/edt_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>

        <EditText
            android:id="@+id/edt_breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/breed"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"/>
        <Spinner
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spn_gender" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/measurement"/>
        <EditText
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:inputType="number"
            android:id="@+id/edt_weight"/>
    </LinearLayout>
</LinearLayout>
